--- a/RepositoryParser/RepositoryParser/View/HourActivityViews/HourActivityFilesAnalyseView.xaml
+++ b/RepositoryParser/RepositoryParser/View/HourActivityViews/HourActivityFilesAnalyseView.xaml
@@ -1,37 +1,42 @@
-﻿<UserControl x:Class="RepositoryParser.View.WeekdayActivityViews.WeekdayActivityChartView"
+﻿<UserControl x:Class="RepositoryParser.View.HourActivityViews.HourActivityFilesAnalyseView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:RepositoryParser.View.WeekdayActivityViews"
-             xmlns:resw="clr-namespace:RepositoryParser.Properties"
-             xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
-             xmlns:imageButton="clr-namespace:RepositoryParser.Controls.ImageButton;assembly=RepositoryParser.Controls"
-             xmlns:extensions="clr-namespace:RepositoryParser.Controls.Extensions;assembly=RepositoryParser.Controls"
-             xmlns:circleHeaderButton="clr-namespace:RepositoryParser.Controls.CircleHeaderButton;assembly=RepositoryParser.Controls"
+             xmlns:local="clr-namespace:RepositoryParser.View.HourActivityViews"
              xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
              xmlns:enums="clr-namespace:RepositoryParser.Helpers.Enums"
+             xmlns:resw="clr-namespace:RepositoryParser.Properties"
              xmlns:metroChart="clr-namespace:De.TorstenMandelkow.MetroChart;assembly=De.TorstenMandelkow.MetroChart"
+             xmlns:extensions="clr-namespace:RepositoryParser.Controls.Extensions;assembly=RepositoryParser.Controls"
              xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:circleHeaderButton="clr-namespace:RepositoryParser.Controls.CircleHeaderButton;assembly=RepositoryParser.Controls"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
-             d:DesignHeight="600" d:DesignWidth="600"
-             DataContext="{Binding Source={StaticResource Locator}, Path=WeekdayActivity}"
-             x:Name="Root">
+             d:DesignHeight="300" d:DesignWidth="300"
+             x:Name="Root"
+             DataContext="{Binding Source={StaticResource Locator}, Path=HourActivityFilesAnalyseViewModel}">
     <UserControl.Resources>
         <conventers:CountOfRepositoriesToVisibilityConventer x:Key="CountOfRepositoriesToVisibilityConventer"/>
         <conventers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+        <conventers:InverseBoolConventer x:Key="InverseBoolConventer"/>
     </UserControl.Resources>
-    
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="250"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+
+        <!--Empty selection message-->
         <TextBlock
             Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
             Visibility="{Binding Path=CountOfSelectedRepositories, 
                                  ConverterParameter={x:Static enums:VisibilityConventerEnumDirection.Inverse},
                                  Converter={StaticResource CountOfRepositoriesToVisibilityConventer}}"
@@ -42,11 +47,34 @@
             VerticalAlignment="Center"
             FontWeight="Light"
             TextWrapping="WrapWithOverflow"/>
-
-        <TabControl Grid.Row="0"
-                    Visibility="{Binding Path=CountOfSelectedRepositories, 
-                        ConverterParameter={x:Static enums:VisibilityConventerEnumDirection.Normal},
-                        Converter={StaticResource CountOfRepositoriesToVisibilityConventer}}">
+        <!--List of files-->
+        <ListView 
+            IsEnabled="{Binding IsLoading, Converter={StaticResource InverseBoolConventer}, UpdateSourceTrigger=PropertyChanged}"
+            Grid.Column="0"
+            Grid.Row="0"
+            VerticalAlignment="Stretch"
+            HorizontalAlignment="Stretch" 
+            Margin="5,0"
+            ItemsSource="{Binding FilesPathsCollection}" 
+            IsSynchronizedWithCurrentItem="False" 
+            BorderThickness="0"
+            ItemContainerStyle="{StaticResource RepositoryAnalyserListViewItem}"
+            Foreground="Black"
+            SelectionMode="Multiple"
+            extensions:ListViewExtensions.SelectedItems="{Binding Path=SelectedFilePaths}">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="SelectionChanged">
+                    <i:InvokeCommandAction Command="{Binding SelectedFileItemChanged}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </ListView>
+        <!--ChartContent-->
+        <TabControl 
+            Grid.Row="0"
+            Grid.Column="1"
+            Visibility="{Binding Path=CountOfSelectedRepositories, 
+                                 ConverterParameter={x:Static enums:VisibilityConventerEnumDirection.Normal},
+                                 Converter={StaticResource CountOfRepositoriesToVisibilityConventer}}">
             <TabItem Header="{x:Static resw:Resources.Chart}">
                 <Grid>
                     <Grid.RowDefinitions>
@@ -54,7 +82,7 @@
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
 
-                    <metroChart:StackedBar100Chart
+                    <metroChart:StackedColumnChart
                         x:Name="StackedColumnChartInstance"
                         ChartTitle=""
                         ChartSubTitle=""
@@ -80,7 +108,7 @@
                     extensions:DataGridExtensions.LastColumnFill="True"
                       >
                     <DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding ChartKey}" Header="{x:Static resw:Resources.Weekday}"/>
+                        <DataGridTextColumn Binding="{Binding ChartKey}" Header="{x:Static resw:Resources.Hour}"/>
                         <DataGridTextColumn Binding="{Binding ChartValue}" Header="{x:Static resw:Resources.CountOfCommits}">
                             <DataGridTextColumn.CellStyle>
                                 <Style>
@@ -88,20 +116,28 @@
                                 </Style>
                             </DataGridTextColumn.CellStyle>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding RepositoryValue}" Header="{x:Static resw:Resources.Repository}"/>
+                        <DataGridTextColumn Binding="{Binding RepositoryValue}" Header="{x:Static resw:Resources.File}"/>
                     </DataGrid.Columns>
 
                 </DataGrid>
             </TabItem>
         </TabControl>
+        <!--Progress ring-->
         <controls:ProgressRing 
-                        Style="{StaticResource AppProgressRing}"
-                        Grid.Row="0"
-                        IsActive="{Binding IsLoading}"
-                        Visibility="{Binding IsLoading, Converter={StaticResource BoolToVisibilityConverter}}"                      
-                        />
-        <DockPanel Grid.Row="1" HorizontalAlignment="Left" Margin="0">
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Grid.Row="0"
+            Style="{StaticResource AppProgressRing}"
+            IsActive="{Binding IsLoading}"
+            Visibility="{Binding IsLoading, Converter={StaticResource BoolToVisibilityConverter}}"/>
+        <!--Export panel-->
+        <DockPanel 
+            Grid.Column="0"
+            Grid.Row="1" 
+            HorizontalAlignment="Left" 
+            Margin="0">
             <circleHeaderButton:CircleHeaderButton 
+                IsEnabled="{Binding IsLoading, Converter={StaticResource InverseBoolConventer}, UpdateSourceTrigger=PropertyChanged}"
                 CommandParameter="{Binding ElementName=Root, Path=DataContext}"
                 Command="{Binding ExportFileCommand}"
                 ImageSource="../../Assets/Icons/PNG_DarkGray/Export-100.png"
@@ -113,6 +149,5 @@
                 BorderBrush="{StaticResource Graphite}"
                 />
         </DockPanel>
-
     </Grid>
 </UserControl>
