--- a/RepositoryParser/RepositoryParser/View/MonthActivityViews/MonthActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/MonthActivityViews/MonthActivityChartView.xaml
@@ -16,7 +16,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="600"
              DataContext="{Binding Source={StaticResource Locator}, Path=MonthActivity}"
-             >
+             x:Name="Root">
     <UserControl.Resources>
         <conventers:CountOfRepositoriesToVisibilityConventer x:Key="CountOfRepositoriesToVisibilityConventer"/>
         <conventers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
@@ -103,7 +103,8 @@
                         Visibility="{Binding IsLoading, Converter={StaticResource BoolToVisibilityConverter}}"                      
                         />
         <DockPanel Grid.Row="1" HorizontalAlignment="Left" Margin="0">
-            <circleHeaderButton:CircleHeaderButton 
+            <circleHeaderButton:CircleHeaderButton
+                CommandParameter="{Binding ElementName=Root, Path=DataContext}"
                 Command="{Binding ExportFileCommand}"
                 ImageSource="../../Assets/Icons/PNG_DarkGray/Export-100.png"
                 ToolTip="{x:Static resw:Resources.ExportToFileButton}"
