--- a/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityChartView.xaml
@@ -14,6 +14,7 @@
                 mc:Ignorable="d" 
                 d:DesignHeight="600" d:DesignWidth="600"
                 DataContext="{Binding Source={StaticResource Locator}, Path=UsersActivity}"
+                x:Name="Root"
                 >
     <UserControl.Resources>
         <conventers:CountOfRepositoriesToVisibilityConventer x:Key="CountOfRepositoriesToVisibilityConventer"/>
@@ -104,7 +105,8 @@
                         Visibility="{Binding IsLoading, Converter={StaticResource BoolToVisibilityConverter}}"                      
                         />
         <DockPanel Grid.Row="1" HorizontalAlignment="Left" Margin="0">
-            <circleHeaderButton:CircleHeaderButton 
+            <circleHeaderButton:CircleHeaderButton
+                CommandParameter="{Binding ElementName=Root, Path=DataContext}"
                 Command="{Binding ExportFileCommand}"
                 ImageSource="../../Assets/Icons/PNG_DarkGray/Export-100.png"
                 ToolTip="{x:Static resw:Resources.ExportToFileButton}"
