--- a/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityContentProviderView.xaml
+++ b/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityContentProviderView.xaml
@@ -15,14 +15,19 @@
              
              >
     <UserControl.Resources>
+        <!--Count of commits-->
         <DataTemplate DataType="{x:Type userActivityViewModels:UsersActivityViewModel}">
             <local:UserActivityChartView/>
         </DataTemplate>
-
+        <!--Count of lines-->
         <DataTemplate DataType="{x:Type userActivityViewModels:UsersCodeFrequencyViewModel}">
             <local:UserActivityCodeFrequencyView/>
         </DataTemplate>
-
+        <!--Files-->
+        <DataTemplate DataType="{x:Type userActivityViewModels:UsersActivityFilesAnalyseViewModel}">
+            <local:UserActivityFilesAnalyseView/>
+        </DataTemplate>
+        <!--Conventers-->
         <conventers:ViewModelBaseToVisibilityConventer x:Key="ViewModelBaseToVisibilityConventer"/>
     </UserControl.Resources>
 
@@ -68,6 +73,17 @@
                 Foreground="Black"
                 ImageSource="../../Assets/Icons/PNG_Gray/Code-100.png"
                 Text="{x:Static resw:Resources.CountOfLines}"
+                Height="45"/>
+            <imageButton:ImageButton 
+                Command="{Binding OpenFilesAnalyseCommand}" 
+                BorderBrush="{StaticResource LightGray}"
+                BorderThickness="0,0,0,0.5"
+                ImageHeight="32"
+                ImageWidth="32"
+                Background="Transparent"
+                Foreground="Black"
+                ImageSource="../../Assets/Icons/PNG_DarkGray/File_DarkGray.png"
+                Text="{x:Static resw:Resources.Files}"
                 Height="45"/>
         </StackPanel>
 
