--- a/RepositoryParser/RepositoryParser/View/WeekdayActivityViews/WeekdayActivityContentProviderView.xaml
+++ b/RepositoryParser/RepositoryParser/View/WeekdayActivityViews/WeekdayActivityContentProviderView.xaml
@@ -14,10 +14,15 @@
              DataContext="{Binding Source={StaticResource Locator}, Path=WeekdayActivityContentProvider}"
              >
     <UserControl.Resources>
+        <!--Count of commits-->
         <DataTemplate DataType="{x:Type weekdayActivityViewModels:WeekDayActivityViewModel}">
             <local:WeekdayActivityChartView/>
         </DataTemplate>
-
+        <!--Files-->
+        <DataTemplate DataType="{x:Type weekdayActivityViewModels:WeekdayActivityFilesAnalyseViewModel}">
+            <local:WeekdayActivityFilesAnalyseView/>
+        </DataTemplate>
+        <!--Conventers-->
         <conventers:ViewModelBaseToVisibilityConventer x:Key="ViewModelBaseToVisibilityConventer"/>
     </UserControl.Resources>
     
@@ -51,6 +56,17 @@
                     Foreground="Black"
                     ImageSource="../../Assets/Icons/PNG_Gray/Poll Topic-100.png"
                     Text="{x:Static resw:Resources.CountOfCommits}"
+                    Height="45"/>
+                <imageButton:ImageButton 
+                    Command="{Binding OpenFilesAnalyseCommand}" 
+                    BorderBrush="{StaticResource LightGray}"
+                    BorderThickness="0,0,0,0.5"
+                    ImageHeight="32"
+                    ImageWidth="32"
+                    Background="Transparent"
+                    Foreground="Black"
+                    ImageSource="../../Assets/Icons/PNG_DarkGray/File_DarkGray.png"
+                    Text="{x:Static resw:Resources.Files}"
                     Height="45"/>
             </StackPanel>
 
