--- a/RepositoryParser/RepositoryParser/View/MonthActivityViews/MonthActivityFilesAnalyseView.xaml
+++ b/RepositoryParser/RepositoryParser/View/MonthActivityViews/MonthActivityFilesAnalyseView.xaml
@@ -1,38 +1,42 @@
-﻿<UserControl x:Class="RepositoryParser.View.DayActivityViews.DayActivityChartView"
+﻿<UserControl x:Class="RepositoryParser.View.MonthActivityViews.MonthActivityFilesAnalyseView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:RepositoryParser.View.DayActivityViews"
+             xmlns:local="clr-namespace:RepositoryParser.View.MonthActivityViews"
              xmlns:resw="clr-namespace:RepositoryParser.Properties"
-             xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
-             xmlns:imageButton="clr-namespace:RepositoryParser.Controls.ImageButton;assembly=RepositoryParser.Controls"
-             xmlns:extensions="clr-namespace:RepositoryParser.Controls.Extensions;assembly=RepositoryParser.Controls"
-             xmlns:circleHeaderButton="clr-namespace:RepositoryParser.Controls.CircleHeaderButton;assembly=RepositoryParser.Controls"
-             xmlns:metroChart="clr-namespace:De.TorstenMandelkow.MetroChart;assembly=De.TorstenMandelkow.MetroChart"
-             xmlns:enums="clr-namespace:RepositoryParser.Helpers.Enums"
              xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
-             xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:enums="clr-namespace:RepositoryParser.Helpers.Enums"
+             xmlns:extensions="clr-namespace:RepositoryParser.Controls.Extensions;assembly=RepositoryParser.Controls"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:metroChart="clr-namespace:De.TorstenMandelkow.MetroChart;assembly=De.TorstenMandelkow.MetroChart"
              xmlns:metroLoadingProgressRing="clr-namespace:RepositoryParser.Controls.MetroLoadingProgressRing;assembly=RepositoryParser.Controls"
+             xmlns:circleHeaderButton="clr-namespace:RepositoryParser.Controls.CircleHeaderButton;assembly=RepositoryParser.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="600" d:DesignWidth="600"
-             DataContext="{Binding Source={StaticResource Locator}, Path=DayActivity }"
-             >
+             d:DesignHeight="300" d:DesignWidth="300"
+             DataContext="{Binding Source={StaticResource Locator}, Path=MonthActivityFilesAnalyseViewModel}"
+             x:Name="Root">
     <UserControl.Resources>
         <conventers:CountOfRepositoriesToVisibilityConventer x:Key="CountOfRepositoriesToVisibilityConventer"/>
         <conventers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+        <conventers:InverseBoolConventer x:Key="InverseBoolConventer"/>
     </UserControl.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="250"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
+        <!--Empty selection message-->
         <TextBlock
             Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
             Visibility="{Binding Path=CountOfSelectedRepositories, 
                                  ConverterParameter={x:Static enums:VisibilityConventerEnumDirection.Inverse},
                                  Converter={StaticResource CountOfRepositoriesToVisibilityConventer}}"
@@ -43,9 +47,31 @@
             VerticalAlignment="Center"
             FontWeight="Light"
             TextWrapping="WrapWithOverflow"/>
-        
+        <!--List of files-->
+        <ListView 
+            IsEnabled="{Binding IsLoading, Converter={StaticResource InverseBoolConventer}, UpdateSourceTrigger=PropertyChanged}"
+            Grid.Column="0"
+            Grid.Row="0"
+            VerticalAlignment="Stretch"
+            HorizontalAlignment="Stretch" 
+            Margin="5,0"
+            ItemsSource="{Binding FilesPathsCollection}" 
+            IsSynchronizedWithCurrentItem="False" 
+            BorderThickness="0"
+            ItemContainerStyle="{StaticResource RepositoryAnalyserListViewItem}"
+            Foreground="Black"
+            SelectionMode="Multiple"
+            extensions:ListViewExtensions.SelectedItems="{Binding Path=SelectedFilePaths}">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="SelectionChanged">
+                    <i:InvokeCommandAction Command="{Binding SelectedFileItemChanged}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </ListView>
+        <!--ChartContent-->
         <TabControl 
             Grid.Row="0"
+            Grid.Column="1"
             Visibility="{Binding Path=CountOfSelectedRepositories, 
                                  ConverterParameter={x:Static enums:VisibilityConventerEnumDirection.Normal},
                                  Converter={StaticResource CountOfRepositoriesToVisibilityConventer}}">
@@ -57,21 +83,21 @@
                     </Grid.RowDefinitions>
 
                     <metroChart:StackedColumnChart
-                    x:Name="StackedColumnChartInstance"
-                    ChartTitle=""
-                    ChartSubTitle=""
-                    Padding="0"
-                    ChartBorderThickness="1"
-                    ChartMargin="0"
-                    Background="Transparent"
-                    ChartLegendVisibility="Visible"
-                    Palette="{StaticResource RepositoryAnalyserGradientPalette}"
-                    />
+                        x:Name="StackedColumnChartInstance"
+                        ChartTitle=""
+                        ChartSubTitle=""
+                        Padding="0"
+                        ChartBorderThickness="1"
+                        ChartMargin="0"
+                        Background="Transparent"
+                        ChartLegendVisibility="Visible"
+                        Palette="{StaticResource RepositoryAnalyserGradientPalette}"
+                        />
                     <metroChart:Legend Grid.Row="1" ItemsSource="{Binding ChartLegendItems}"/>
                 </Grid>
             </TabItem>
             <TabItem Header="{x:Static resw:Resources.List}">
-                <DataGrid
+                <DataGrid 
                     ItemsSource="{Binding DataCollection}"
                     CanUserSortColumns="True"
                     AutoGenerateColumns="False"
@@ -79,7 +105,8 @@
                     IsReadOnly="True"
                     VerticalScrollBarVisibility="Auto"
                     Style="{StaticResource AzureDataGrid}"
-                    extensions:DataGridExtensions.LastColumnFill="True">
+                    extensions:DataGridExtensions.LastColumnFill="True"
+                      >
                     <DataGrid.Columns>
                         <DataGridTextColumn Binding="{Binding ChartKey}" Header="{x:Static resw:Resources.Hour}"/>
                         <DataGridTextColumn Binding="{Binding ChartValue}" Header="{x:Static resw:Resources.CountOfCommits}">
@@ -89,22 +116,27 @@
                                 </Style>
                             </DataGridTextColumn.CellStyle>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding RepositoryValue}" Header="{x:Static resw:Resources.Repository}"/>
+                        <DataGridTextColumn Binding="{Binding RepositoryValue}" Header="{x:Static resw:Resources.File}"/>
                     </DataGrid.Columns>
 
                 </DataGrid>
             </TabItem>
         </TabControl>
-
+        <!--Progress ring-->
         <metroLoadingProgressRing:MetroLoadingProgressRing
             Grid.Row="0"
             Grid.Column="0"
             Grid.ColumnSpan="2"
             Text="{x:Static resw:Resources.AnalysingDataMessage}"
             IsDataLoadingFlag="{Binding Path=IsLoading, UpdateSourceTrigger=PropertyChanged}"/>
-        
-        <DockPanel Grid.Row="1" HorizontalAlignment="Left" Margin="0">
+        <!--Export panel-->
+        <DockPanel 
+            Grid.Column="0"
+            Grid.Row="1" 
+            HorizontalAlignment="Left" 
+            Margin="0">
             <circleHeaderButton:CircleHeaderButton 
+                IsEnabled="{Binding IsLoading, Converter={StaticResource InverseBoolConventer}, UpdateSourceTrigger=PropertyChanged}"
                 CommandParameter="{Binding ElementName=Root, Path=DataContext}"
                 Command="{Binding ExportFileCommand}"
                 ImageSource="../../Assets/Icons/PNG_DarkGray/Export-100.png"
@@ -116,6 +148,5 @@
                 BorderBrush="{StaticResource Graphite}"
                 />
         </DockPanel>
-
     </Grid>
 </UserControl>
