--- a/RepositoryParser/RepositoryParser/View/MainWindow.xaml
+++ b/RepositoryParser/RepositoryParser/View/MainWindow.xaml
@@ -13,7 +13,7 @@
         xmlns:view="clr-namespace:RepositoryParser.View"
         xmlns:imageButton="clr-namespace:RepositoryParser.Controls.ImageButton;assembly=RepositoryParser.Controls"
         DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
-        MinHeight="600" MinWidth="800"
+        MinHeight="600" MinWidth="1050"
         ShowIconOnTitleBar="True"
         ShowTitleBar="True"
         ShowCloseButton="True"
@@ -79,21 +79,22 @@
 
 
     <Window.Resources>
+        <!--Conventers-->
         <conventers:ViewModelBaseToVisibilityConventer x:Key="ViewModelBaseToVisibilityConventer"/>
         <conventers:NegativeBoolConventer x:Key="NegativeBoolConventer"/>
-        
+        <!--Presentation-->
         <DataTemplate DataType="{x:Type viewModel:PresentationViewModel}">
             <view:PresentationView/>
         </DataTemplate>
-
+        <!--Database Management-->
         <DataTemplate DataType="{x:Type viewModel:DataBaseManagementViewModel}">
             <view:DataBaseManagementView/>
         </DataTemplate>
-
+        <!--Filtering-->
         <DataTemplate DataType="{x:Type viewModel:FilteringViewModel}">
             <view:FilteringView/>
         </DataTemplate>
-
+        <!--Analysis-->
         <DataTemplate DataType="{x:Type viewModel:AnalysisViewModel}">
             <view:AnalysisView/>
         </DataTemplate>
@@ -120,14 +121,14 @@
         <StackPanel Grid.Row="1" Grid.Column="0">
             <imageButton:ImageButton 
                 x:Name="DbManagementBtn"
-                Background="{StaticResource Graphite}"
+                Background="{StaticResource GradientMainColor}"
                 Command="{Binding OpenDataBaseManagementCommand}"
                 ImageSource="../Assets/Icons/ManagementIcon.png"
                 Text="{x:Static resw:Resources.DataBaseManagement}"/>
             
             <imageButton:ImageButton 
                 x:Name="PresentationBtn"
-                Background="{StaticResource Graphite}"
+                Background="{StaticResource GradientMainColor}"
                 Command="{Binding OpenPresentationCommand}"
                 ImageSource="../Assets/Icons/Presentation-100.png"
                 Text="{x:Static resw:Resources.Presentation}"
@@ -135,7 +136,7 @@
                     
             <imageButton:ImageButton 
                 x:Name="FilteringBtn"
-                Background="{StaticResource Graphite}"
+                Background="{StaticResource GradientMainColor}"
                 Command="{Binding OpenFilteringCommand}"
                 ImageSource="../Assets/Icons/Filter-100.png"
                 Text="{x:Static resw:Resources.Filtering}"
@@ -143,7 +144,7 @@
 
             <imageButton:ImageButton 
                 x:Name="AnalysisBtn"
-                Background="{StaticResource Graphite}"
+                Background="{StaticResource GradientMainColor}"
                 Command="{Binding OpenAnalysisCommand}"
                 ImageSource="../Assets/Icons/Analysis_grey.png"
                 Text="{x:Static resw:Resources.AnalysisButton}"
