--- a/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityChartView.xaml
@@ -57,7 +57,7 @@
                     </Grid.RowDefinitions>
 
                     <metroChart:StackedColumnChart
-                    x:Name="StackedColumnChartInstance"
+                    x:Name="ChartViewInstance"
                     ChartTitle=""
                     ChartSubTitle=""
                     Padding="0"
@@ -113,7 +113,7 @@
                 Width="56"
                 ImageHeight="28" 
                 ImageWidth="28"
-                BorderBrush="{StaticResource Graphite}"
+                BorderBrush="{StaticResource AppMainColor}"
                 />
         </DockPanel>
 
