--- a/RepositoryParser/RepositoryParser/View/HourActivityViews/HourActivityFilesAnalyseView.xaml
+++ b/RepositoryParser/RepositoryParser/View/HourActivityViews/HourActivityFilesAnalyseView.xaml
@@ -84,7 +84,7 @@
                     </Grid.RowDefinitions>
 
                     <metroChart:StackedColumnChart
-                        x:Name="StackedColumnChartInstance"
+                        x:Name="ChartViewInstance"
                         ChartTitle=""
                         ChartSubTitle=""
                         Padding="0"
@@ -146,7 +146,7 @@
                 Width="56"
                 ImageHeight="28" 
                 ImageWidth="28"
-                BorderBrush="{StaticResource Graphite}"
+                BorderBrush="{StaticResource AppMainColor}"
                 />
         </DockPanel>
     </Grid>
