--- a/RepositoryParser/RepositoryParser/View/MonthActivityViews/MonthActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/MonthActivityViews/MonthActivityChartView.xaml
@@ -58,7 +58,7 @@
                     </Grid.RowDefinitions>
 
                     <metroChart:StackedBarChart
-                        x:Name="StackedColumnChartInstance"
+                        x:Name="ChartViewInstance"
                         ChartTitle=""
                         ChartSubTitle=""
                         Padding="0"
@@ -112,7 +112,7 @@
                 Width="56"
                 ImageHeight="28" 
                 ImageWidth="28"
-                BorderBrush="{StaticResource Graphite}"
+                BorderBrush="{StaticResource AppMainColor}"
                 />
         </DockPanel>
 
