--- a/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityFilesAnalyseView.xaml
+++ b/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityFilesAnalyseView.xaml
@@ -85,7 +85,7 @@
 
                     <ScrollViewer>
                         <metroChart:StackedBar100Chart
-                            x:Name="StackedColumnChartInstance"
+                            x:Name="ChartViewInstance"
                             ChartTitle=""
                             ChartSubTitle=""
                             Padding="0"
@@ -150,7 +150,7 @@
                 Width="56"
                 ImageHeight="28" 
                 ImageWidth="28"
-                BorderBrush="{StaticResource Graphite}"
+                BorderBrush="{StaticResource AppMainColor}"
                 />
         </DockPanel>
     </Grid>
