--- a/RepositoryParser/RepositoryParser/Resources/AppStyles.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/AppStyles.xaml
@@ -18,7 +18,7 @@
     </Style>
 
     <Style x:Key="AppTitleTextBlock" TargetType="TextBlock">
-        <Setter Property="Foreground" Value="{StaticResource Graphite}"/>
+        <Setter Property="Foreground" Value="{StaticResource AppMainColor}"/>
         <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="FontSize" Value="28"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
@@ -39,7 +39,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="chartingToolkit:ColumnDataPoint">
                     <Grid>
-                        <Rectangle Fill="{StaticResource Graphite}" Stroke="Black"/>
+                        <Rectangle Fill="{StaticResource AppMainColor}" Stroke="Black"/>
                         <Grid Margin="0 -20 0 0" HorizontalAlignment="Center" VerticalAlignment="Top">
                             <TextBlock Text="{TemplateBinding FormattedDependentValue}" Margin="2"/>
                         </Grid>
@@ -69,7 +69,7 @@
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Margin" Value="3"/>
-        <Setter Property="Foreground" Value="{StaticResource Graphite}"/>
+        <Setter Property="Foreground" Value="{StaticResource AppMainColor}"/>
         <Setter Property="Opacity" Value="1"/>
     </Style>
 
