--- a/RepositoryParser/RepositoryParser/Resources/ButtonStyles.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/ButtonStyles.xaml
@@ -8,10 +8,10 @@
 
 
 
-    <Style x:Key="AppGraphiteButton" TargetType="Button">
+    <Style x:Key="AppAppMainColorButton" TargetType="Button">
         <Setter Property="Height" Value="50"/>
         <Setter Property="Margin" Value="0,0,0,5"/>
-        <Setter Property="Background" Value="{StaticResource Graphite}"/>
+        <Setter Property="Background" Value="{StaticResource AppMainColor}"/>
         <Setter Property="Foreground" Value="{StaticResource Grey}"/>
         <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="FontSize" Value="13"/>
@@ -50,7 +50,7 @@
     <Style x:Key="ExportButton" TargetType="Button">
         <Setter Property="Height" Value="35"/>
         <Setter Property="Foreground" Value="{StaticResource Grey}"/>
-        <Setter Property="Background" Value="{StaticResource Graphite}"/>
+        <Setter Property="Background" Value="{StaticResource AppMainColor}"/>
         <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Width" Value="150"/>
@@ -102,7 +102,7 @@
     <Style x:Key="MainTile" TargetType="Button">
         <Setter Property="Height" Value="80"/>
         <Setter Property="Margin" Value="0,0,0,5"/>
-        <Setter Property="Background" Value="{StaticResource Graphite}"/>
+        <Setter Property="Background" Value="{StaticResource AppMainColor}"/>
         <Setter Property="Foreground" Value="{StaticResource Grey}"/>
         <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="FontSize" Value="15"/>
@@ -110,7 +110,7 @@
 
     <Style x:Key="AnalysisTile" TargetType="Button">
         <Setter Property="Margin" Value="10"/>
-        <Setter Property="Background" Value="{StaticResource Graphite}"/>
+        <Setter Property="Background" Value="{StaticResource AppMainColor}"/>
         <Setter Property="Foreground" Value="{StaticResource Grey}"/>
         <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="FontSize" Value="13"/>
@@ -150,7 +150,7 @@
     <Style x:Key="AnalysisTile2" TargetType="Button">
         <Setter Property="Margin" Value="10"/>
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Foreground" Value="{StaticResource Graphite}"/>
+        <Setter Property="Foreground" Value="{StaticResource AppMainColor}"/>
         <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="FontSize" Value="13"/>
         <Setter Property="BorderThickness" Value="0"/>
