--- a/RepositoryParser/RepositoryParser/Resources/Themes/Brushes.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/Themes/Brushes.xaml
@@ -13,11 +13,11 @@
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
     
-    <SolidColorBrush x:Key="MyGreen" Color="#aaaaaa" />
-    <SolidColorBrush x:Key="Graphite" Color="#1a472a" />
+    <SolidColorBrush x:Key="AppSecondMainColor" Color="#aaaaaa" />
+    <SolidColorBrush x:Key="AppMainColor" Color="#1a472a" />
     <SolidColorBrush x:Key="DarkGray" Color="#5d5d5d"/>
     <SolidColorBrush x:Key="LightGray" Color="#666666"/>
-   <!-- <SolidColorBrush x:Key="Graphite" Color="#336699" />-->
+   <!-- <SolidColorBrush x:Key="AppMainColor" Color="#336699" />-->
     <SolidColorBrush x:Key="Grey" Color="#FAFAFA" />
     <SolidColorBrush x:Key="GitOrange" Color="#F34F29"/>
     <SolidColorBrush x:Key="SvnBlue" Color="#809CC8"/>
