--- a/RepositoryParser/RepositoryParser/View/AnalysisWindowView.xaml
+++ b/RepositoryParser/RepositoryParser/View/AnalysisWindowView.xaml
@@ -55,7 +55,7 @@
         <Border Grid.Column="1"
                     Grid.ColumnSpan="3" 
                     Grid.Row="1"
-                    Background="{StaticResource Graphite}"
+                    Background="{StaticResource AppMainColor}"
                     Padding="0"
                     >
             <Label  FontSize="16" 
@@ -74,7 +74,7 @@
             <Button x:Name="ActivityBtn" 
                     Height="50" 
                     Command="{Binding ChartCommand}" 
-                    Style="{StaticResource AppGraphiteButton}"
+                    Style="{StaticResource AppAppMainColorButton}"
                     >
                 <StackPanel Orientation="Horizontal" Width="{Binding ElementName=ActivityBtn, Path=ActualWidth}">
                     <Image Source="../Assets/Icons/Pie-Chart.png" Height="24" Margin="2,0,10,0"/>
@@ -83,7 +83,7 @@
             </Button>
             <Button x:Name="MonthBtn" 
                     Command="{Binding MonthActivityWindowCommand}" 
-                    Style="{StaticResource AppGraphiteButton}"
+                    Style="{StaticResource AppAppMainColorButton}"
                     >
                 <StackPanel Orientation="Horizontal" Width="{Binding ElementName=MonthBtn, Path=ActualWidth}">
                     <Image Source="../Assets/Icons/Column-Chart.png" Height="24" Margin="2,0,10,0"/>
@@ -92,7 +92,7 @@
             </Button>
             <Button x:Name="WeekdayBtn"
                     Command="{Binding GoToWeekDayActivityWindowCommand}"
-                    Style="{StaticResource AppGraphiteButton}"
+                    Style="{StaticResource AppAppMainColorButton}"
                     >
                 <StackPanel Orientation="Horizontal" Width="{Binding ElementName=WeekdayBtn, Path=ActualWidth}">
                     <Image Source="../Assets/Icons/Area-Chart.png" Height="24" Margin="2,0,10,0"/>
@@ -101,7 +101,7 @@
             </Button>
             <Button x:Name="DayBtn" 
                     Command="{Binding GoToDayChartWindowCommand}" 
-                    Style="{StaticResource AppGraphiteButton}"
+                    Style="{StaticResource AppAppMainColorButton}"
                     >
                 <StackPanel Orientation="Horizontal" Width="{Binding ElementName=DayBtn, Path=ActualWidth}">
                     <Image Source="../Assets/Icons/Points-Chart.png" Height="24" Margin="2,0,10,0"/>
@@ -110,7 +110,7 @@
             </Button>
             <Button x:Name="HourtBtn"
                     Command="{Binding GoToHourActivityWindowCommand}"
-                    Style="{StaticResource AppGraphiteButton}"
+                    Style="{StaticResource AppAppMainColorButton}"
                     >
                 <StackPanel Orientation="Horizontal" Width="{Binding ElementName=MonthBtn, Path=ActualWidth}">
                     <Image Source="../Assets/Icons/Column-Chart.png" Height="24" Margin="2,0,10,0"/>
@@ -119,7 +119,7 @@
             </Button>
             <Button x:Name="DiffBtn"
                     Command="{Binding GoToDifferencesCommand}"
-                    Style="{StaticResource AppGraphiteButton}"
+                    Style="{StaticResource AppAppMainColorButton}"
                     >
                 <StackPanel Orientation="Horizontal" Width="{Binding ElementName=DiffBtn, Path=ActualWidth}">
                     <Image Source="../Assets/Icons/Compare-52.png" Height="24" Margin="2,0,10,0"/>
@@ -139,7 +139,7 @@
             <TextBlock Grid.Row="0" 
                        Text="{x:Static resw:Resources.FilteringAuthor}" 
                        Margin="5,0,0,0" 
-                       Background="{StaticResource MyGreen}"
+                       Background="{StaticResource AppSecondMainColor}"
                        VerticalAlignment="Center"
                        HorizontalAlignment="Stretch"
                        Padding="4"
@@ -171,7 +171,7 @@
             <TextBlock Grid.Row="0" 
                        Text="{x:Static resw:Resources.FilteringDate}" 
                        Margin="5,0,0,0" 
-                       Background="{StaticResource MyGreen}"
+                       Background="{StaticResource AppSecondMainColor}"
                        VerticalAlignment="Top"
                        HorizontalAlignment="Stretch"
                        Padding="4"
@@ -202,7 +202,7 @@
             <TextBlock Grid.Row="2" 
                        Text="{x:Static resw:Resources.FilteringMessage}" 
                        Margin="5,0,0,0" 
-                       Background="{StaticResource MyGreen}"
+                       Background="{StaticResource AppSecondMainColor}"
                        VerticalAlignment="Top"
                        HorizontalAlignment="Stretch"
                        Padding="4"
@@ -234,7 +234,7 @@
             <TextBlock Grid.Row="0" 
                        Text="{x:Static resw:Resources.FilteringPickRepository}" 
                        Margin="5,0,0,0" 
-                       Background="{StaticResource MyGreen}"
+                       Background="{StaticResource AppSecondMainColor}"
                        VerticalAlignment="Top"
                        HorizontalAlignment="Stretch"
                        Padding="4"
@@ -253,7 +253,7 @@
             <TextBlock Grid.Row="2" 
                        Text="{x:Static resw:Resources.FilteringPickBranch}" 
                        Margin="5,0,0,0" 
-                       Background="{StaticResource MyGreen}"
+                       Background="{StaticResource AppSecondMainColor}"
                        VerticalAlignment="Top"
                        HorizontalAlignment="Stretch"
                        Padding="4"
@@ -275,7 +275,7 @@
 
         <StackPanel Grid.Row="1" Grid.Column="4" Grid.RowSpan="2" Margin="1,5,1,0">
             <Button Command="{Binding ClearFiltersCommand}" 
-                    Style="{StaticResource AppGraphiteButton}"
+                    Style="{StaticResource AppAppMainColorButton}"
                     >
                 <StackPanel Orientation="Horizontal" Width="{Binding ElementName=MonthBtn, Path=ActualWidth}">
                     <Image Source="../Assets/Icons/Clear.png" Height="24" Margin="2,0,10,0"/>
@@ -287,14 +287,14 @@
         <StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="5">
             <Button x:Name="SendBtn"
                     Command="{Binding SendDataCommand}"
-                    Style="{StaticResource AppGraphiteButton}"
-                    Background="{StaticResource MyGreen}"
-                    Foreground="{StaticResource Graphite}"
+                    Style="{StaticResource AppAppMainColorButton}"
+                    Background="{StaticResource AppSecondMainColor}"
+                    Foreground="{StaticResource AppMainColor}"
                     FontSize="20" 
                     Margin="2" 
                     Padding="25,4" 
                     HorizontalAlignment="Center"
-                    BorderBrush="{StaticResource Graphite}"
+                    BorderBrush="{StaticResource AppMainColor}"
                     BorderThickness="2"
                     >
                 <StackPanel Orientation="Horizontal" Width="{Binding ElementName=SendBtn, Path=Width}">
@@ -315,18 +315,18 @@
                     Content="{x:Static resw:Resources.SendDataButton}"
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Center"
-                    Background="{StaticResource MyGreen}" 
+                    Background="{StaticResource AppSecondMainColor}" 
                     FontSize="20" 
                     Margin="2" Padding="4" />
         </StackPanel>
 
         <StackPanel Grid.Row="1" Grid.Column="0" VerticalAlignment="Top" Margin="0,10,0,0" Grid.RowSpan="3">
-            <Button x:Name="ChartBtn" Content="{x:Static resw:Resources.ActivityAnalyseButton}" Height="50" Command="{Binding ChartCommand}" Margin="0,0,0,5" Background="{StaticResource MyGreen}"/>
-            <Button x:Name="DateBtn" Content="{x:Static resw:Resources.MonthActivityAnalyseButton}" Height="50" Margin="0,0,0,5" Command="{Binding MonthActivityWindowCommand}" Background="{StaticResource MyGreen}" />
-            <Button x:Name="GoToDayChartBtn" Content="{x:Static resw:Resources.MonthDayActivityAnalyseButton}" Height="50" Margin="0,0,0,5" Command="{Binding GoToDayChartWindowCommand}" Background="{StaticResource MyGreen}" />
-            <Button x:Name="GoToWeekDayChartBtn" Content="{x:Static resw:Resources.WeekdayActivityAnalyseButton}" Height="50" Margin="0,0,0,5" Command="{Binding GoToWeekDayActivityWindowCommand}" Background="{StaticResource MyGreen}" />
-            <Button x:Name="GoToHourChartBtn" Content="{x:Static resw:Resources.HourActivityAnalyseButton}" Height="50" Margin="0,0,0,5" Command="{Binding GoToHourActivityWindowCommand}" Background="{StaticResource MyGreen}" />
-            <Button x:Name="GoToDifferences" Content="{x:Static resw:Resources.DifferencesButton}" Height="50" Margin="0,0,0,5" Command="{Binding GoToDifferencesCommand}" Background="{StaticResource MyGreen}"/>
+            <Button x:Name="ChartBtn" Content="{x:Static resw:Resources.ActivityAnalyseButton}" Height="50" Command="{Binding ChartCommand}" Margin="0,0,0,5" Background="{StaticResource AppSecondMainColor}"/>
+            <Button x:Name="DateBtn" Content="{x:Static resw:Resources.MonthActivityAnalyseButton}" Height="50" Margin="0,0,0,5" Command="{Binding MonthActivityWindowCommand}" Background="{StaticResource AppSecondMainColor}" />
+            <Button x:Name="GoToDayChartBtn" Content="{x:Static resw:Resources.MonthDayActivityAnalyseButton}" Height="50" Margin="0,0,0,5" Command="{Binding GoToDayChartWindowCommand}" Background="{StaticResource AppSecondMainColor}" />
+            <Button x:Name="GoToWeekDayChartBtn" Content="{x:Static resw:Resources.WeekdayActivityAnalyseButton}" Height="50" Margin="0,0,0,5" Command="{Binding GoToWeekDayActivityWindowCommand}" Background="{StaticResource AppSecondMainColor}" />
+            <Button x:Name="GoToHourChartBtn" Content="{x:Static resw:Resources.HourActivityAnalyseButton}" Height="50" Margin="0,0,0,5" Command="{Binding GoToHourActivityWindowCommand}" Background="{StaticResource AppSecondMainColor}" />
+            <Button x:Name="GoToDifferences" Content="{x:Static resw:Resources.DifferencesButton}" Height="50" Margin="0,0,0,5" Command="{Binding GoToDifferencesCommand}" Background="{StaticResource AppSecondMainColor}"/>
 
         </StackPanel>
 
