--- a/RepositoryParser/RepositoryParser/View/WeekdayActivityViews/WeekdayActivityFilesAnalyseView.xaml
+++ b/RepositoryParser/RepositoryParser/View/WeekdayActivityViews/WeekdayActivityFilesAnalyseView.xaml
@@ -83,7 +83,7 @@
                     </Grid.RowDefinitions>
 
                     <metroChart:StackedBar100Chart
-                        x:Name="StackedColumnChartInstance"
+                        x:Name="ChartViewInstance"
                         ChartTitle=""
                         ChartSubTitle=""
                         Padding="0"
@@ -145,7 +145,7 @@
                 Width="56"
                 ImageHeight="28" 
                 ImageWidth="28"
-                BorderBrush="{StaticResource Graphite}"
+                BorderBrush="{StaticResource AppMainColor}"
                 />
         </DockPanel>
     </Grid>
