--- a/RepositoryParser/RepositoryParser/View/MonthActivityViews/MonthActivityContiniousAnalyseView.xaml
+++ b/RepositoryParser/RepositoryParser/View/MonthActivityViews/MonthActivityContiniousAnalyseView.xaml
@@ -1,25 +1,24 @@
-﻿<UserControl x:Class="RepositoryParser.View.WeekdayActivityViews.WeekdayActivityFilesAnalyseView"
+﻿<UserControl x:Class="RepositoryParser.View.MonthActivityViews.MonthActivityContiniousAnalyseView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:RepositoryParser.View.WeekdayActivityViews"
+             xmlns:local="clr-namespace:RepositoryParser.View.MonthActivityViews"
              xmlns:resw="clr-namespace:RepositoryParser.Properties"
              xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
              xmlns:enums="clr-namespace:RepositoryParser.Helpers.Enums"
-             xmlns:extensions="clr-namespace:RepositoryParser.Controls.Extensions;assembly=RepositoryParser.Controls"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:metroChart="clr-namespace:De.TorstenMandelkow.MetroChart;assembly=De.TorstenMandelkow.MetroChart"
+             xmlns:extensions="clr-namespace:RepositoryParser.Controls.Extensions;assembly=RepositoryParser.Controls"
              xmlns:metroLoadingProgressRing="clr-namespace:RepositoryParser.Controls.MetroLoadingProgressRing;assembly=RepositoryParser.Controls"
              xmlns:circleHeaderButton="clr-namespace:RepositoryParser.Controls.CircleHeaderButton;assembly=RepositoryParser.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
-             DataContext="{Binding Source={StaticResource Locator}, Path=WeekdayActivityFilesAnalyseViewModel}"
-             x:Name="Root">
+             x:Name="Root"
+             DataContext="{Binding Source={StaticResource Locator}, Path=MonthActivityContiniousAnalyseViewModel}">
     <UserControl.Resources>
         <conventers:CountOfRepositoriesToVisibilityConventer x:Key="CountOfRepositoriesToVisibilityConventer"/>
+        <conventers:IntToLenghtConventer x:Key="IntToLenghtConventer"/>
         <conventers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
-        <conventers:InverseBoolConventer x:Key="InverseBoolConventer"/>
     </UserControl.Resources>
 
     <Grid>
@@ -28,15 +27,11 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="250"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <!--Empty selection message-->
         <TextBlock
             Grid.Row="0"
-            Grid.Column="0"
-            Grid.ColumnSpan="2"
             Visibility="{Binding Path=CountOfSelectedRepositories, 
                                  ConverterParameter={x:Static enums:VisibilityConventerEnumDirection.Inverse},
                                  Converter={StaticResource CountOfRepositoriesToVisibilityConventer}}"
@@ -46,59 +41,39 @@
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
             FontWeight="Light"
-            TextWrapping="WrapWithOverflow"
-            Grid.ZIndex="3"/>
-        <!--List of files-->
-        <ListView 
-            IsEnabled="{Binding IsLoading, Converter={StaticResource InverseBoolConventer}, UpdateSourceTrigger=PropertyChanged}"
-            Grid.Column="0"
-            Grid.Row="0"
-            VerticalAlignment="Stretch"
-            HorizontalAlignment="Stretch" 
-            Margin="5,0"
-            ItemsSource="{Binding FilesPathsCollection}" 
-            IsSynchronizedWithCurrentItem="False" 
-            BorderThickness="0"
-            ItemContainerStyle="{StaticResource RepositoryAnalyserListViewItem}"
-            Foreground="Black"
-            SelectionMode="Multiple"
-            extensions:ListViewExtensions.SelectedItems="{Binding Path=SelectedFilePaths}">
-            <i:Interaction.Triggers>
-                <i:EventTrigger EventName="SelectionChanged">
-                    <i:InvokeCommandAction Command="{Binding SelectedFileItemChanged}"/>
-                </i:EventTrigger>
-            </i:Interaction.Triggers>
-        </ListView>
-        <!--ChartContent-->
-        <TabControl 
-            Grid.Row="0"
-            Grid.Column="1"
-            Visibility="{Binding Path=CountOfSelectedRepositories, 
-                                 ConverterParameter={x:Static enums:VisibilityConventerEnumDirection.Normal},
-                                 Converter={StaticResource CountOfRepositoriesToVisibilityConventer}}">
+            TextWrapping="WrapWithOverflow"/>
+
+        <TabControl Grid.Row="0"
+                    Grid.Column="0"
+                    Visibility="{Binding Path=CountOfSelectedRepositories, 
+                    ConverterParameter={x:Static enums:VisibilityConventerEnumDirection.Normal},
+                    Converter={StaticResource CountOfRepositoriesToVisibilityConventer}}">
             <TabItem Header="{x:Static resw:Resources.Chart}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-
-                    <metroChart:StackedBar100Chart
-                        x:Name="ChartViewInstance"
-                        ChartTitle=""
-                        ChartSubTitle=""
-                        Padding="0"
-                        ChartBorderThickness="1"
-                        ChartMargin="0"
-                        Background="Transparent"
-                        ChartLegendVisibility="Visible"
-                        Palette="{StaticResource RepositoryAnalyserGradientPalette}"
-                        />
+                    <ScrollViewer>
+                        <metroChart:StackedBar100Chart
+                            x:Name="ChartViewInstance"
+                            ChartTitle=""
+                            ChartSubTitle=""
+                            Padding="0"
+                            ChartBorderThickness="1"
+                            ChartMargin="0"
+                            Background="Transparent"
+                            ChartLegendVisibility="Visible"
+                            Palette="{StaticResource RepositoryAnalyserGradientPalette}"
+                            ClipToBounds="False"
+                            Height="{Binding CountOfRows, Converter={StaticResource IntToLenghtConventer}}"
+                            />
+                    </ScrollViewer>
                     <metroChart:Legend Grid.Row="1" ItemsSource="{Binding ChartLegendItems}"/>
                 </Grid>
             </TabItem>
             <TabItem Header="{x:Static resw:Resources.List}">
-                <DataGrid 
+                <DataGrid Grid.Row="1" Grid.Column="0"
                     ItemsSource="{Binding DataCollection}"
                     CanUserSortColumns="True"
                     AutoGenerateColumns="False"
@@ -106,10 +81,9 @@
                     IsReadOnly="True"
                     VerticalScrollBarVisibility="Auto"
                     Style="{StaticResource AzureDataGrid}"
-                    extensions:DataGridExtensions.LastColumnFill="True"
-                      >
+                    extensions:DataGridExtensions.LastColumnFill="True">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding ChartKey}" Header="{x:Static resw:Resources.Hour}"/>
+                        <DataGridTextColumn Binding="{Binding ChartKey}" Header="{x:Static resw:Resources.FilteringDate}" MinWidth="150"/>
                         <DataGridTextColumn Binding="{Binding ChartValue}" Header="{x:Static resw:Resources.CountOfCommits}">
                             <DataGridTextColumn.CellStyle>
                                 <Style>
@@ -117,27 +91,19 @@
                                 </Style>
                             </DataGridTextColumn.CellStyle>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding RepositoryValue}" Header="{x:Static resw:Resources.File}"/>
+                        <DataGridTextColumn Binding="{Binding RepositoryValue}" Header="{x:Static resw:Resources.Repository}"/>
                     </DataGrid.Columns>
 
                 </DataGrid>
             </TabItem>
         </TabControl>
-        <!--Progress ring-->
         <metroLoadingProgressRing:MetroLoadingProgressRing
             Grid.Row="0"
             Grid.Column="0"
-            Grid.ColumnSpan="2"
             Text="{x:Static resw:Resources.AnalysingDataMessage}"
             IsDataLoadingFlag="{Binding Path=IsLoading, UpdateSourceTrigger=PropertyChanged}"/>
-        <!--Export panel-->
-        <DockPanel 
-            Grid.Column="0"
-            Grid.Row="1" 
-            HorizontalAlignment="Left" 
-            Margin="0">
-            <circleHeaderButton:CircleHeaderButton 
-                IsEnabled="{Binding IsLoading, Converter={StaticResource InverseBoolConventer}, UpdateSourceTrigger=PropertyChanged}"
+        <DockPanel Grid.Row="1" HorizontalAlignment="Left" Margin="0">
+            <circleHeaderButton:CircleHeaderButton
                 CommandParameter="{Binding ElementName=Root, Path=DataContext}"
                 Command="{Binding ExportFileCommand}"
                 ImageSource="../../Assets/Icons/PNG_DarkGray/Export-100.png"
@@ -149,5 +115,6 @@
                 BorderBrush="{StaticResource AppMainColor}"
                 />
         </DockPanel>
+
     </Grid>
 </UserControl>
